@@ -138,6 +138,7 @@ def build(bld):
 	mooglpf
 	downsampler_mono
 	downsampler_stereo
+	controltovc
 	'''.split()
 
 	for i in plugins:
