@@ -1,6 +1,7 @@
 0.1.4:
 	* LFO frequency now represented as Tempo and Multiplier
 	* Beat Repeater doesn't crash if parameters changed while repeating
+	* A small plugin to convert Ingen Control to VC ('0 to 1' to '-1 to 1')
 
 0.1.3:
 	* Fix in Sample&Hold ttl
